[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/SceneList/Season-1 Stages/AnimatedSceneTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/SceneList/PlatformScenes/TropicalPlatForm1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/SceneList/ActorScenes/PlayersScenes/InteractionScenes/AgniPuthiran.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/SceneList/ActorScenes/PlayersScenes/InteractionScenes/BraveGirl.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/SceneList/ActorScenes/PlayersScenes/InteractionScenes/NinjaBoy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Scripts/AnimationScenes/Season-1/Stage2Animated.gd" type="Script" id=6]
[ext_resource path="res://Scenes/SceneList/Menu Scenes/CoverScene/FadeIn.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/SceneList/MiscScenes/ScreenShake.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/SceneList/ActorScenes/PlayersScenes/InteractionScenes/AgniFather.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Pointers/Pointer1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Pointers/Pointer2.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Stage-2_Animation" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="ColorRect" parent="ConversationLayer/CanvasLayer" index="1"]
anchor_left = 0.454
anchor_top = 0.458
anchor_right = 0.454
anchor_bottom = 0.458
margin_left = -547.211
margin_top = -263.982
margin_right = 603.789
margin_bottom = -108.982

[node name="GoNextConversation" parent="ConversationLayer/CanvasLayer/ColorRect" index="1"]
margin_right = 1147.0

[node name="TropicalPlatform1" parent="." index="1" instance=ExtResource( 2 )]
position = Vector2( 21.2003, 55.6508 )

[node name="AgniPuthiran" parent="." index="2" instance=ExtResource( 3 )]
position = Vector2( 1520.02, 849.757 )

[node name="AnimatedSprite" parent="AgniPuthiran" index="0"]
position = Vector2( -94.9442, -21.7643 )
scale = Vector2( 1.1331, 1.26419 )
flip_h = true

[node name="Pointer" parent="AgniPuthiran/AnimatedSprite" index="0"]
frames = SubResource( 1 )
animation = "default"

[node name="BraveGirl" parent="." index="3" instance=ExtResource( 4 )]
position = Vector2( 725.588, 851.802 )

[node name="Ninja boy" parent="." index="4" instance=ExtResource( 5 )]
position = Vector2( 1059.81, 856.232 )

[node name="FadeIn" parent="." index="5" instance=ExtResource( 7 )]

[node name="Camera" type="Camera2D" parent="." index="6"]
position = Vector2( 1198.35, 626.867 )
current = true

[node name="ScreenShake" parent="Camera" index="0" instance=ExtResource( 8 )]

[node name="Agni\'s Father" parent="." index="7" instance=ExtResource( 9 )]
position = Vector2( 1724.51, 843.374 )
scale = Vector2( -1, 1 )
[connection signal="fade_in_finished" from="FadeIn" to="." method="_on_FadeIn_fade_in_finished"]

[editable path="ConversationLayer"]

[editable path="AgniPuthiran"]
